--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/**/*.test.js"
   },
   "keywords": [],
   "author": "Joseph Palacio <josephmpalacio@gmail.com>",
@@ -12,5 +12,13 @@
   "dependencies": {
     "chai": "^4.1.2",
     "mocha": "^3.5.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Joematpal/tdl.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Joematpal/tdl/issues"
+  },
+  "homepage": "https://github.com/Joematpal/tdl#readme"
 }
